added doc strings where needed

--- a/Quafing_replicate_FINE.ipynb
+++ b/Quafing_replicate_FINE.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath ='/Users/eslt0101/Projects/SABM/testpy2/omri_subak_data.xlsx'\n"
+    "filepath ='/Users/eslt0101/Projects/SABM/FINE_Code/code/data/omri_subak_data.xlsx'\n"
    ]
   },
   {
@@ -45,16 +45,7 @@
    "execution_count": 5,
    "id": "5bda46f3-a1a0-4372-8907-726e66b2b153",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/eslt0101/Projects/REPOS/eScience/SDCCA/QUAFING/quafing/preprocessing.py:130: UserWarning: Warning: Column type 'e' not found in data. Please check column type.\n",
-      "  warnings.warn(\"Warning: Column type '%s' not found in data. Please check column type.\"%cols[i])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prep.select_columns(cols=['e'],deselect=True)"
    ]
@@ -172,7 +163,7 @@
        "  'metric': True,\n",
        "  'max_iter': 3000,\n",
        "  'eps': 1e-09,\n",
-       "  'random_state': RandomState(MT19937) at 0x7F9C141A0640,\n",
+       "  'random_state': RandomState(MT19937) at 0x7F9A209D6740,\n",
        "  'dissimilarity': 'precomputed',\n",
        "  'n_jobs': 1,\n",
        "  'dimension': 2,\n",
